fixed the nav-items visibility in light theme for mobile

--- a/website/mainstyle.css
+++ b/website/mainstyle.css
@@ -1838,6 +1838,9 @@ body.light-mode {
 .light-mode .text-white {
   color: #000;
 }
+.light-mode  li a {
+  color: #fff !important;
+}
 
 .light-mode .text-neutral-300 {
   color: #4b5563;
